# OCR

./: .env  LAB_1.md  LAB_2.md  LAB_3.md  README.md  app.py  document_loader.py  main.py  ocr_system.py  pyproject.toml  requirements.txt
